--- a/views/sms_guide.tmpl
+++ b/views/sms_guide.tmpl
@@ -71,7 +71,7 @@ LeanCloud 短信服务支持的应用场景有以下三种：
 - 小于或等于 70 个字，按一条计费。
 - 大于 70 个字，按每 67 字一条计费。
 
-状态为「等待回执」的短信不会收费计入账单。每条短信的收费标准请参考 [官网价格方案](/pricing.html)。
+状态为「等待回执」的短信不会收费计入账单。每条短信的收费标准请参考 [官网价格方案](/pricing)。
 
 ### 短信购买
 
