--- a/templates/include/header.html
+++ b/templates/include/header.html
@@ -41,14 +41,11 @@
               <div class="name">帮助</div>
             </a>
             <ul class="dropdown-menu">
-              {% if layout!="board-nologin.swig" %}
-              <!-- <li><a href="start.html">快速入门</a></li> -->
-              {% endif %}
               <li><a href="https://leanticket.cn/t/leancloud">技术支持</a></li>
               <li><a href="http://forum.leancloud.cn">社区</a></li>
               <li><a href="http://blog.leancloud.cn/">Blog</a></li>
               <li role="presentation" class="divider"></li>
-              <li><a href="https://leancloud.cn/apionline/">在线 API 工具</a></li>
+              <li><a href="/dashboard/apionline/">在线 API 工具</a></li>
               <li><a href="http://leancloud.sexy" target="_blank">第三方库</a></li>
               <li role="presentation" class="divider"></li>
               <!-- <li><a href="/apps.html">LeanCloud App</a></li> -->
