--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -29,7 +29,7 @@ isHome: true
 <!-- .doc-home-title -->
 <div style="height:100px;">
 &nbsp;
-  <div id="section-nav" class="scrollspy text-center  mobile-hide">
+  <div id="section-nav" class="scrollspy text-center mobile-hide">
     <div class="spinner"></div>
     <ul class="nav">
     </ul>
@@ -37,7 +37,6 @@ isHome: true
 </div>
 
 <!-- .toc-hack -->
-
 <div class="row">
   <div class="section col-md-8 col-md-offset-2 col-xs-offset-0">
     <h2 class="section-title">数据存储</h2>
@@ -45,19 +44,7 @@ isHome: true
       <div class="section-content col-xs-12 col-sm-6 col-md-6">
         <h3>开发指南</h3>
         <ul class="list-unstyled">
-          <li><span>SDK 安装</span>
-            <ul class="list-unstyled list-platform">
-              <li><a href="sdk_setup-android.html">Android</a></li>
-              <li><a href="sdk_setup-objc.html">Objective-C</a></li>
-              <li><a href="sdk_setup-js.html">JavaScript</a></li>
-              <li><a href="sdk_setup-python.html">Python</a></li>
-              <li><a href="sdk_setup-php.html">PHP</a></li>
-              <li><a href="sdk_setup-wp.html"><span style="font-size:11px;">Windows Phone</span></a></li>
-              <li><a href="sdk_setup-unity.html">Unity3D</a></li>
-              <li><a href="sdk_setup-java.html">Java</a></li>
-              <li><a href="sdk_setup-swift.html">Swift</a></li>
-            </ul>
-          </li>
+          <li><span><a href="install.html">SDK 安装</a></span></li>
           <li>
             <span>快速入门</span>
             <ul class="list-unstyled list-platform">
@@ -197,7 +184,7 @@ isHome: true
       <div class="section-content col-xs-12 col-sm-6 col-md-6">
         <h3>开发指南</h3>
         <ul class="list-unstyled">
-          <li><a href="start.html">安装</a></li>
+          <li><span><a href="install.html">SDK 安装</a></span></li>
           <li><a href="realtime_v2.html">实时通信服务总览</a></li>
           <li>
             <span>通信基础库开发指南</span>
@@ -254,7 +241,7 @@ isHome: true
       <div class="section-content col-xs-12 col-sm-6 col-md-6">
         <h3>开发指南</h3>
         <ul class="list-unstyled">
-          <li><a href="start.html">安装</a></li>
+          <li><span><a href="install.html">SDK 安装</a></span></li>
           <li><a href="push_guide.html">消息推送服务总览</a></li>
           <li>
             <span>消息推送开发指南</span>
@@ -297,7 +284,7 @@ isHome: true
       <div class="section-content col-xs-12 col-sm-6 col-md-6">
         <h3>开发指南</h3>
         <ul class="list-unstyled">
-          <li><a href="start.html">安装</a></li>
+          <li><span><a href="install.html">SDK 安装</a></span></li>
           <li>
             <span>统计服务使用指南</span>
             <ul class="list-unstyled list-platform">
