--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -44,7 +44,7 @@ isHome: true
       <div class="section-content col-xs-12 col-sm-6 col-md-6">
         <h3>开发指南</h3>
         <ul class="list-unstyled">
-          <li><span><a href="install.html">SDK 安装</a></span></li>
+          <li><span><a href="start.html">SDK 安装</a></span></li>
           <li>
             <span>快速入门</span>
             <ul class="list-unstyled list-platform">
@@ -184,7 +184,7 @@ isHome: true
       <div class="section-content col-xs-12 col-sm-6 col-md-6">
         <h3>开发指南</h3>
         <ul class="list-unstyled">
-          <li><span><a href="install.html">SDK 安装</a></span></li>
+          <li><span><a href="start.html">SDK 安装</a></span></li>
           <li><a href="realtime_v2.html">实时通信服务总览</a></li>
           <li>
             <span>通信基础库开发指南</span>
@@ -241,7 +241,7 @@ isHome: true
       <div class="section-content col-xs-12 col-sm-6 col-md-6">
         <h3>开发指南</h3>
         <ul class="list-unstyled">
-          <li><span><a href="install.html">SDK 安装</a></span></li>
+          <li><span><a href="start.html">SDK 安装</a></span></li>
           <li><a href="push_guide.html">消息推送服务总览</a></li>
           <li>
             <span>消息推送开发指南</span>
@@ -284,7 +284,7 @@ isHome: true
       <div class="section-content col-xs-12 col-sm-6 col-md-6">
         <h3>开发指南</h3>
         <ul class="list-unstyled">
-          <li><span><a href="install.html">SDK 安装</a></span></li>
+          <li><span><a href="start.html">SDK 安装</a></span></li>
           <li>
             <span>统计服务使用指南</span>
             <ul class="list-unstyled list-platform">
