fix: typos in code samples (#1849)
* fix: typos in code samples

* fix title variable in template

--- a/templates/pages/start.html
+++ b/templates/pages/start.html
@@ -1,6 +1,6 @@
 ---
 layout: start.swig
-title: SDK 安装指南 - LeanCloud
+title: "SDK 安装指南 - "
 ---
 <div class="start-page doc-content" ng-controller="StartCtrl">
 
