rename acl doc and update links (#1855)

--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -73,7 +73,7 @@ isHome: true
             <span><a href="relation-guide.html">数据模型设计指南</a></span>
           </li>
           <li>
-            <span><a href="acl_guide.html">ACL 权限管理指南</a></span>
+            <span><a href="acl-guide.html">ACL 权限管理指南</a></span>
           </li>
           {%- if node != 'qcloud' -%}
           {% include 'templates/include/_sms.html' %}
