--- a/templates/pages/weapp-domains.html
+++ b/templates/pages/weapp-domains.html
@@ -1,13 +1,10 @@
 ---
-layout: download.swig
-title: 小程序域名白名单配置 - LeanCloud
+layout: start.swig
+title: 小程序域名白名单配置
 ---
 <script src="//cdn1.lncld.net/static/js/2.1.1/av-min.js"></script>
-<div class="start-page" ng-controller="WeappDomainsCtrl" >
-
-  <div class="doc-home-title">
-    <h1 class="font-logo">小程序域名白名单配置</h1>
-  </div>
+<div class="start-page doc-content" ng-controller="WeappDomainsCtrl" >
+  <h1 class="font-logo">小程序域名白名单配置</h1>
   <!-- .doc-home-title -->
 
   <div class="login" ng-if="!user.username">
@@ -28,30 +25,31 @@ title: 小程序域名白名单配置 - LeanCloud
       <div class="step-content col-sm-4" ng-hide="apps">
         <form ng-hide="apps.all" class="form-inline">
           <a ng-href="/applist.html#/newapp" class="btn  btn-primary create-app ng-scope" translate="ACTION_CREATE_APP">创建应用</a>
-          <p  class="help-block" style="">您目前还没有创建任何应用，需要先创建应用</p>
+          <p class="help-block" style="">您目前还没有创建任何应用，需要先创建应用</p>
         </form>
       </div>
     </div>
   </div>
   <div class="step">
-    <h3>2. 登录微信公众平台</h3>
-    <div class="row">
-      <div class="step-content col-sm-6" ng-show="apps">
-
-        登录 <a href="https://mp.weixin.qq.com" target="_blank">微信公众平台</a>，前往 <strong>设置 - 开发设置</strong>，点击 <strong>服务器配置</strong> 下的<strong>「修改」</strong>链接
+    <h3>2. 登录微信公众平台</h3>
+    <div class="row" ng-if="user.username && apps">
+      <div class="step-content col-sm-6">
+        <p>登录 <a href="https://mp.weixin.qq.com" target="_blank">微信公众平台</a>，前往 <strong>设置</strong> &gt; <strong>开发设置</strong> &gt; <strong>服务器配置</strong> &gt; <strong>「修改」</strong>链接。</p>
       </div>
     </div>
   </div>
 
   <div class="step">
     <h3>3. 增加以下域名</h3>
-
-    <div class="row">
-      <div class="step-content col-sm-6" ng-show="apps">
-        <p ng-show="loading">正在获取配置...</p>
+    <div class="row" ng-if="user.username && apps">
+      <div class="step-content col-sm-6">
+        <div class="spinner-wrap" ng-show="loading">
+          <p>正在获取配置...</p>
+          <div class="spinner"></div>
+        </div>
         <table ng-show="!loading">
           <tr>
-            <td rowspan="3" width="40%">request 域名</td>
+            <th rowspan="3" width="40%">request 域名</th>
             <td>
               {% if node=='qcloud' %}
               <input class="form-control" type="text" value="e1-api.leancloud.cn" readonly/>
@@ -77,7 +75,7 @@ title: 小程序域名白名单配置 - LeanCloud
             </td>
           </tr>
           <tr>
-            <td>uploadFile 域名</td>
+            <th>uploadFile 域名</th>
             <td>
               {% if node=='qcloud' %}
               <input class="form-control" type="text" value="web.file.myqcloud.com" readonly/>
@@ -89,7 +87,7 @@ title: 小程序域名白名单配置 - LeanCloud
             </td>
           </tr>
           <tr>
-            <td>downloadFile 域名<br/>（仅在使用 wx.downloadFile 时需要配置）</td>
+            <th>downloadFile 域名<br/><span style="font-weight: 300; color:#999;">仅在使用 <code>wx.downloadFile</code> <br/>时需要配置</span></th>
             <td> <input class="form-control" type="text" ng-model="domains.download" readonly/></td>
           </tr>
           {% if node !== 'us' %}
@@ -103,7 +101,7 @@ title: 小程序域名白名单配置 - LeanCloud
             {% for i in arr %}
               <tr>
                 {% if i === 1 %}
-                  <td rowspan="20">socket 域名<br/>（仅在使用实时通讯功能时需要配置）</td>
+                  <th rowspan="20">socket 域名<br/><span style="font-weight: 300; color:#999;">仅在使用实时通讯功能<br/>时需要配置</span></th>
                 {% endif %}
                 <td>
                   <input class="form-control" type="text" value="cn-<%= area %>-cell<%= i %>.leancloud.cn" readonly/>
