remove INPUT tag to fully display content in small screen size

--- a/templates/pages/weapp-domains.html
+++ b/templates/pages/weapp-domains.html
@@ -6,7 +6,6 @@ title: 小程序域名白名单配置
 <div class="start-page doc-content" ng-controller="WeappDomainsCtrl" >
   <h1 class="font-logo">小程序域名白名单配置</h1>
   <!-- .doc-home-title -->
-
   <div class="login" ng-if="!user.username">
     <a ng-href="/login.html#/signin" class="btn  btn-primary ng-scope">登录</a>
     <p  class="help-block" style="">查看域名白名单配置，需要先登录。</p>
@@ -22,7 +21,7 @@ title: 小程序域名白名单配置
         </select>
       </div>
 
-      <div class="step-content col-sm-4" ng-hide="apps">
+      <div class="step-content col-sm-12" ng-hide="apps">
         <form ng-hide="apps.all" class="form-inline">
           <a ng-href="/applist.html#/newapp" class="btn  btn-primary create-app ng-scope" translate="ACTION_CREATE_APP">创建应用</a>
           <p class="help-block" style="">您目前还没有创建任何应用，需要先创建应用</p>
@@ -33,7 +32,7 @@ title: 小程序域名白名单配置
   <div class="step">
     <h3>2. 登录微信公众平台</h3>
     <div class="row" ng-if="user.username && apps">
-      <div class="step-content col-sm-6">
+      <div class="step-content col-sm-12">
         <p>登录 <a href="https://mp.weixin.qq.com" target="_blank">微信公众平台</a>，前往 <strong>设置</strong> &gt; <strong>开发设置</strong> &gt; <strong>服务器配置</strong> &gt; <strong>「修改」</strong>链接。</p>
       </div>
     </div>
@@ -42,7 +41,7 @@ title: 小程序域名白名单配置
   <div class="step">
     <h3>3. 增加以下域名</h3>
     <div class="row" ng-if="user.username && apps">
-      <div class="step-content col-sm-6">
+      <div class="step-content col-sm-12">
         <div class="spinner-wrap" ng-show="loading">
           <p>正在获取配置...</p>
           <div class="spinner"></div>
@@ -51,44 +50,44 @@ title: 小程序域名白名单配置
           <tr>
             <th rowspan="3" width="40%">request 域名</th>
             <td>
-              {% if node=='qcloud' %}
-              <input class="form-control" type="text" value="e1-api.leancloud.cn" readonly/>
+              {% if node === 'qcloud' %}
+              e1-api.leancloud.cn
               {% elseif node === 'us' %}
-              <input class="form-control" type="text" value="us-api.leancloud.cn" readonly/>
+              us-api.leancloud.cn
               {% else %}
-              <input class="form-control" type="text" value="api.leancloud.cn" readonly/>
+              api.leancloud.cn
               {% endif %}
             </td>
           </tr>
           <tr>
-            <td> <input class="form-control" type="text" value="app-router.leancloud.cn" readonly/></td>
+            <td>app-router.leancloud.cn</td>
           </tr>
           <tr>
             <td>
-              {% if node=='qcloud' %}
-              <input class="form-control" type="text" value="router-q0-push.leancloud.cn" readonly/>
+              {% if node === 'qcloud' %}
+              router-q0-push.leancloud.cn
               {% elseif node === 'us' %}
-              <input class="form-control" type="text" value="router-a0-push.leancloud.cn" readonly/>
-              {% else %}
-              <input class="form-control" type="text" value="router-g0-push.leancloud.cn" readonly/>
+              router-a0-push.leancloud.cn
+              {% else -%}
+              router-g0-push.leancloud.cn
               {% endif %}
             </td>
           </tr>
           <tr>
             <th>uploadFile 域名</th>
             <td>
-              {% if node=='qcloud' %}
-              <input class="form-control" type="text" value="web.file.myqcloud.com" readonly/>
+              {% if node === 'qcloud' %}
+              web.file.myqcloud.com
               {% elseif node === 'us' %}
-              <input class="form-control" type="text" ng-model="domains.download" readonly/>
+              <span ng-bind="domains.download"></span>
               {% else %}
-              <input class="form-control" type="text" value="up.qbox.me" readonly/>
+              up.qbox.me
               {% endif %}
             </td>
           </tr>
           <tr>
             <th>downloadFile 域名<br/><span style="font-weight: 300; color:#999;">仅在使用 <code>wx.downloadFile</code> <br/>时需要配置</span></th>
-            <td> <input class="form-control" type="text" ng-model="domains.download" readonly/></td>
+            <td ng-bind="domains.download"></td>
           </tr>
           {% if node !== 'us' %}
             {% if node === 'qcloud' %}
@@ -103,9 +102,7 @@ title: 小程序域名白名单配置
                 {% if i === 1 %}
                   <th rowspan="20">socket 域名<br/><span style="font-weight: 300; color:#999;">仅在使用实时通讯功能<br/>时需要配置</span></th>
                 {% endif %}
-                <td>
-                  <input class="form-control" type="text" value="cn-<%= area %>-cell<%= i %>.leancloud.cn" readonly/>
-                </td>
+                <td>cn-<%= area %>-cell<%= i %>.leancloud.cn</td>
               </tr>
             {% endfor %}
           {% endif %}
