fix: [REST] 增加 Class 命名规范 (#1872)
Closes #1869

--- a/views/_data.njk
+++ b/views/_data.njk
@@ -13,3 +13,7 @@
 {% macro regex(useSingleQuotes=false) -%}
   ^((?!机票).)*&dollar;{% if useSingleQuotes == true %}&apos;{% else %}&quot;{% endif %}
 {%- endmacro %}
+
+{% macro classNameConvention(className="Class 类名称（ClassName）") -%}
+{{className | trim | replace(r/([\x00-\xff])$/gi,"$1 ") }}必须以字母开头，只能包含字母、数字和下划线。
+{%- endmacro %}
