--- a/templates/pages/sdk_down.html
+++ b/templates/pages/sdk_down.html
@@ -1,7 +1,7 @@
 --- layout: download.swig ---
 <link rel="alternate" type="application/atom+xml" title="LeanCloud SDK Update Feed" href="https://download.leancloud.cn/sdk/feed.xml" />
 <style type="text/css">
-.doc-content h2 { color: #333; }
+.doc-content h2 { color: #333; } h1 .changelog-rss {display: inline-block;line-height: 1; height: 24px;vertical-align: 5px;}
 </style>
 <div class="row" ng-controller="DownCtrl">
   <div class="col-md-12">
@@ -182,9 +182,11 @@
   <li><a href="https://github.com/leancloud/cpp-sdk" class="btn btn-link"> C++ SDK</a></li>
   <li><a href="https://github.com/leancloud/swift-sdk" class="btn btn-link"> Swift SDK</a></li>
 </ul>
+</div><div class="dl-cell" style="border-color:transparent;"></div>
 </div>
-</div>
+
 <!-- .row -->
+
 </div>
 <!-- .col-md-12 -->
 <div class="col-md-12">
