fix: wrap <script> in raw tag

--- a/views/leanengine_webhosting_guide.tmpl
+++ b/views/leanengine_webhosting_guide.tmpl
@@ -1,8 +1,5 @@
-{% set appid = '{{appid}}' %}
-{% set appkey = '{{appkey}}' %}
-{% set masterkey = '{{masterkey}}' %}
 {% set var_app_domain = '{应用的域名}' %}
-<script>$(window).load(function() {$('.do-expand-all').click();})</script>
+{% raw %}<script>$(window).load(function() {$('.do-expand-all').click();})</script>{% endraw %}
 # 网站托管开发指南 &middot; {{platformName}}
 
 网站托管是云引擎的一个子模块，允许你用 {{platformName}} 开发一个 Web 程序，提供云函数和 Hook，还可以提供静态文件的托管和自定义的路由、绑定你自己的域名。你可以用它为你的移动应用提供一个介绍和下载页、开发一个管理员控制台或完整的网站，或者运行一些必须在服务器端运行的自定义逻辑。
