update caution message for debug log

--- a/views/_parts.html
+++ b/views/_parts.html
@@ -78,7 +78,7 @@ Client::setDebug(true);
 ```
 {%- endif %}
 
-{{ alert("在应用发布之前，请关闭调试日志。") }}
+{{ alert("在应用发布之前，请关闭调试日志，以免暴露敏感数据。") }}
 {%- endif %}
 {%- endmacro %}
 
