fix: update SDK download links to be China-friendly (#1891)
* fix: update SDK download links to be China-friendly

Closes #1888

* http to https

* added ChatKit OC & Android

--- a/templates/pages/sdk_down.html
+++ b/templates/pages/sdk_down.html
@@ -8,9 +8,9 @@
     <div class="doc-home-title">
       <h1 class="font-logo">
         {% if node=='qcloud' %}
-        TAB SDK 下载 
+        TAB SDK 下载
         {% else %}
-        LeanCloud SDK 下载 
+        LeanCloud SDK 下载
         {% endif %}
       <a href="https://download.leancloud.cn/sdk/feed.xml" class="changelog-rss bstooltip" title="所有平台 SDK 的 RSS 更新"><i class="icon icon-rss"></i> RSS</a>
       </h1>
@@ -25,13 +25,14 @@
         <div class="desc">
           <h2><i class="icon icon-github"></i> Objective-C（开放源码）</h2>
           <p>
-            分为 iOS、macOS、watchOS 和 tvOS SDK， <a href="https://github.com/leancloud/objc-sdk/releases">查看所有</a>
+            分为 iOS、macOS、watchOS 和 tvOS SDK， <a href="https://releases.leanapp.cn/#/leancloud/objc-sdk/releases">查看所有</a>
           </p>
         </div>
         <ul class="list-unstyled list-inline download-btns">
-          <li> <a href="https://github.com/leancloud/objc-sdk" class="btn btn-sm btn-primary">Objective-C SDK </a></li>
-          <li><a href="https://github.com/leancloud/leancloud-feedback-ios" class="btn btn-link"> 用户反馈组件</a></li>
-          <li><a href="https://github.com/leancloud/leancloud-social-ios" class="btn btn-link"> 社交组件</a></li>
+          <li><a href="https://releases.leanapp.cn/#/leancloud/objc-sdk/releases" class="btn btn-sm btn-primary">Objective-C SDK </a></li>
+          <li><a href="https://releases.leanapp.cn/#/leancloud/leancloud-feedback-ios/releases" class="btn btn-link"> 用户反馈组件</a></li>
+          <li><a href="https://releases.leanapp.cn/#/leancloud/leancloud-social-ios/releases" class="btn btn-link"> 社交组件</a></li>
+          <li><a href="http://releases.leanapp.cn/#/leancloud/ChatKit-OC/releases" class="btn btn-link">ChatKit</a></li>
         </ul>
       </div>
       <div class="dl-cell">
@@ -42,9 +43,9 @@
           </p>
         </div>
         <ul class="list-unstyled list-inline download-btns">
-          <li><a href="https://github.com/leancloud/javascript-sdk" class="btn btn-sm btn-primary"> 数据存储 SDK</a>
+          <li><a href="https://releases.leanapp.cn/#/leancloud/javascript-sdk/releases" class="btn btn-sm btn-primary"> 数据存储 SDK</a>
         </li>
-        <li><a href=" https://github.com/leancloud/js-realtime-sdk" class="btn btn-sm btn-primary"> 实时通信 SDK</a>
+        <li><a href="https://releases.leanapp.cn/#/leancloud/js-realtime-sdk/releases" class="btn btn-sm btn-primary"> 实时通信 SDK</a>
       </li>
   </ul>
 </div>
@@ -85,6 +86,10 @@
   </li>
   <li class="muted">·</li>
   <li>
+    <a href="http://releases.leanapp.cn/#/leancloud/LeanCloudChatKit-Android/releases">ChatKit</a>
+  </li>
+  <li class="muted">·</li>
+  <li>
     <a href="https://download.leancloud.cn/sdk/android/">其他版本</a>
   </li>
   <li class="muted">·</li>
@@ -93,31 +98,31 @@
   </li>
 </ul>
 </div>
-<div class="dl-cell"> 
-<h2><i class="icon icon-github"></i> Unity SDK </h2> 
-<div class="desc"> 
-    <p> 
-      自 2016 年 12 月起，原来的 AVOSCloud.dll 按照模块被拆分为 Core、Storage、Analytics、Push 等不同的文件。 <a href="https://github.com/leancloud/unity-sdk/releases">查看所有</a> 
-    </p> 
-  </div> 
-  <ul class="list-unstyled list-inline download-btns"> 
-    <li> <a href="https://github.com/leancloud/unity-sdk" class="btn btn-sm btn-primary"> Unity SDK </a></li> 
-  </ul> 
-</div>
-<div class="dl-cell"> 
-<h2> .NET (新版)</h2> 
-<div class="desc"> 
-    <p> 
-      自 2016 年 12 月起，.NET SDK 将统一代码并且按照模块被拆分为 Core、Storage、Analytics、Push 等不同的文件。 
-      <a href="https://www.nuget.org/packages/LeanCloud/">Install LeanCloud .NET SDK via nuget</a> 
-    </p> 
-  </div> 
-  <ul class="list-unstyled list-inline download-btns"> 
-    <li> <a href="https://www.nuget.org/packages/LeanCloud/" class="btn btn-sm btn-primary"> .NET SDK </a></li> 
-  </ul> 
-</div> 
 <div class="dl-cell">
-<h2>Windows Phone SDK (暂停维护，不推荐使用) <small>v{{sdkversion.wp}}</small></h2>
+<h2><i class="icon icon-github"></i> Unity SDK </h2>
+<div class="desc">
+    <p>
+      自 2016 年 12 月起，原来的 AVOSCloud.dll 按照模块被拆分为 Core、Storage、Analytics、Push 等不同的文件。 <a href="https://releases.leanapp.cn/#/leancloud/unity-sdk/releases">查看所有</a>
+    </p>
+  </div>
+  <ul class="list-unstyled list-inline download-btns">
+    <li> <a href="https://releases.leanapp.cn/#/leancloud/unity-sdk/releases" class="btn btn-sm btn-primary"> Unity SDK </a></li>
+  </ul>
+</div>
+<div class="dl-cell">
+<h2> .NET（新版）</h2>
+<div class="desc">
+    <p>
+      自 2016 年 12 月起，.NET SDK 将统一代码并且按照模块被拆分为 Core、Storage、Analytics、Push 等不同的文件。
+      <a href="https://www.nuget.org/packages/LeanCloud/">Install LeanCloud .NET SDK via nuget</a>
+    </p>
+  </div>
+  <ul class="list-unstyled list-inline download-btns">
+    <li> <a href="https://www.nuget.org/packages/LeanCloud/" class="btn btn-sm btn-primary"> .NET SDK </a></li>
+  </ul>
+</div>
+<div class="dl-cell">
+<h2>Windows Phone SDK（暂停维护，不推荐使用）<small>v{{sdkversion.wp}}</small></h2>
 <div class="desc">
   <div class="download-option-wrap">
     <div class="checkbox download-option">
@@ -177,8 +182,8 @@
 </div>
 <ul class="list-unstyled list-inline download-btns">
   <li><a href="https://github.com/leancloud/java-sdk" class="btn btn-link"> Java SDK</a></li>
-  <li><a href="https://github.com/leancloud/python-sdk" class="btn btn-link"> Python SDK</a></li>
-  <li><a href="https://github.com/leancloud/php-sdk/" class="btn btn-link"> PHP SDK</a></li>
+  <li><a href="https://releases.leanapp.cn/#/leancloud/python-sdk/releases" class="btn btn-link"> Python SDK</a></li>
+  <li><a href="https://releases.leanapp.cn/#/leancloud/php-sdk/releases" class="btn btn-link"> PHP SDK</a></li>
   <li><a href="https://github.com/leancloud/cpp-sdk" class="btn btn-link"> C++ SDK</a></li>
   <li><a href="https://github.com/leancloud/swift-sdk" class="btn btn-link"> Swift SDK</a></li>
 </ul>
@@ -189,21 +194,21 @@
 
 </div>
 <!-- .col-md-12 -->
-<div class="col-md-12">
+<!--<div class="col-md-12">
 <h2>SDK、Demo 汇总</h2>
 <ul class="list-unstyled list-inline">
-<li><a href="https://github.com/leancloud/leancloud-sdk" class="btn btn-lg  btn-default"><i class="icon icon-github"></i> leancloud/leancloud-sdk</a>
+<li><a href="https://releases.leanapp.cn/#/leancloud/leancloud-sdk/releases" class="btn btn-lg  btn-default"><i class="icon icon-github"></i> leancloud/leancloud-sdk</a>
 </li>
 <li><a href="https://github.com/leancloud/leancloud-demos" class="btn btn-lg  btn-default"><i class="icon icon-github"></i> leancloud/leancloud-demos</a>
 </li>
 </ul>
 </div>
-<!--   <div class="col-md-12">
+<div class="col-md-12">
 <p>我们的开源 SDK：</p>
 <ul class="list-unstyled list-inline">
 <li><a href="https://github.com/leancloud/cpp-sdk" class="btn  btn-default btn-lg"><i class="icon icon-github"></i> C++ SDK</a></li>
-<li><a href="https://github.com/leancloud/javascript-sdk" class="btn  btn-default btn-lg"><i class="icon icon-github"></i> JavaScript Core SDK</a></li>
-<li><a href=" https://github.com/leancloud/js-realtime-sdk" class="btn  btn-default btn-lg"><i class="icon icon-github"></i> JavaScript 实时通信 SDK</a></li>
+<li><a href="https://releases.leanapp.cn/#/leancloud/javascript-sdk/releases" class="btn  btn-default btn-lg"><i class="icon icon-github"></i> JavaScript Core SDK</a></li>
+<li><a href="https://releases.leanapp.cn/#/leancloud/js-realtime-sdk/releases" class="btn  btn-default btn-lg"><i class="icon icon-github"></i> JavaScript 实时通信 SDK</a></li>
 <li><a href="https://github.com/leancloud/js-push-sdk" class="btn  btn-default btn-lg"><i class="icon icon-github"></i> JavaScript 推送 SDK</a></li>
 <li><a href="https://github.com/leancloud/python-sdk" class="btn  btn-default btn-lg"><i class="icon icon-github"></i> Python SDK</a></li>
 </ul>
