--- a/templates/include/header.html
+++ b/templates/include/header.html
@@ -45,7 +45,7 @@
               <li><a href="http://forum.leancloud.cn">社区</a></li>
               <li><a href="http://blog.leancloud.cn/">Blog</a></li>
               <li role="presentation" class="divider"></li>
-              <li><a href="/dashboard/apionline/">在线 API 工具</a></li>
+              <li><a href="/dashboard/apionline/index.html">在线 API 工具</a></li>
               <li><a href="http://leancloud.sexy" target="_blank">第三方库</a></li>
               <li role="presentation" class="divider"></li>
               <!-- <li><a href="/apps.html">LeanCloud App</a></li> -->
